--- a/style.css
+++ b/style.css
@@ -433,22 +433,40 @@
      width: 130px;
      height: 115px;
      left: 10px;
-      object-fit:none;  
-     
-      
+      object-fit:none;        
+}
+.image-nestedb{
+    position: relative;
+    left: 50px;
+    width: 120px;
+}
+.image-nesteda{
+    position: relative;
+    width: 120px;
+    left: 20px;
+}
+.image-nesteda img{
+   position: relative;
+     width: 120px;
+     height: 115px;
+      object-fit:none;       
 }
 .image-nested2 p{
     font-size: 12px;
     position: relative;
     left: 29px;
-    
-
 }
 .image-nested2 img{
    position: relative;
      width: 120px;
      height: 115px;
      left: 30px; 
+      object-fit:none;      
+}
+.image-nestedb img{
+   position: relative;
+     width: 120px;
+     height: 115px;
       object-fit:none;  
      
 }
@@ -539,8 +557,20 @@
     width: 300px;
     height: 350px;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
 } 
+.image-nested-imagea{
+    display: flex;
+    width: 300px;
+    height: 350px;
+    flex-wrap: wrap;
+} 
+.margin1{
+    margin-left: 1.5rem;
+}
+.margin2{
+    margin-left: 1.2rem;
+}
 .image-select{
     padding-top: 20px;
     background-color: white;
@@ -1061,8 +1091,8 @@
     justify-content: center;
 }
 .table-container{
-    margin-left: 26px;
-    margin-right: 26px;
+    /* margin-left: 26px;
+    margin-right: 26px; */
 }
 #table-data{
     padding-left: 9px;
